[package]
name = "rustlm"
version = "0.2.0"
authors = ["Boris Albar <b.albar@catie.fr"]
edition = "2018"

[lib]
name = "rustlm"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.11.0"
pyo3 = { version = "0.11.1", features = ["extension-module"] }
ndarray = { version = "0.13.1", features = ["blas", "rayon"] }
rayon = "1.5.0"
radix_trie = { version = "0.2.0" }
tokenizers = { path = "/home/balbar/Library/tokenizers/tokenizers" }
onnxruntime-sys = {version = "0.0.10", path = "/home/balbar/Library/onnxruntime-rs/onnxruntime-sys"}
onnxruntime = {version = "0.0.10", path = "/home/balbar/Library/onnxruntime-rs/onnxruntime"}
tracing = "0.1"
tracing-subscriber = "0.2"

[features]
default = ["fastexp"]
fastexp = []

[profile.release]
lto=true
codegen-units=1
panic="abort"

[build]
rustflags = ["-Ctarget-cpu=native"]
