[package]
name = "rustlm"
version = "0.5.0"
authors = ["Boris Albar <b.albar@catie.fr"]
edition = "2018"

[lib]
name = "rustlm"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.16.2"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
ndarray = { version = "0.15.6", features = ["blas", "rayon"] }
rayon = "1.5.3"
patricia_tree = { version = "0.3.1" }
tokenizers = { git = "https://github.com/huggingface/tokenizers" }
permutation = {git = "https://github.com/jeremysalwen/rust-permutations"}
triton-rust = {path = "submodules/triton-rust/"}

[features]
default = ["fastexp"]
fastexp = []

[profile.release]
lto=true
codegen-units=1
panic="abort"

[build]
rustflags = ["-Ctarget-cpu=native"]
